WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170677
REGRESSION (
r214403
): fast/events/drag-to-navigate.html and fast/events/only-valid-drop-targets-receive-file-drop.html failing
https://bugs.webkit.org/show_bug.cgi?id=170677
Summary
REGRESSION (r214403): fast/events/drag-to-navigate.html and fast/events/only-...
Wenson Hsieh
Reported
2017-04-10 09:14:20 PDT
<
rdar://problem/31512633
>
Attachments
Patch
(7.14 KB, patch)
2017-04-10 09:24 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Patch
(7.17 KB, patch)
2017-04-10 09:32 PDT
,
Wenson Hsieh
thorton
: review+
Details
Formatted Diff
Diff
Patch for landing
(7.17 KB, patch)
2017-04-10 10:09 PDT
,
Wenson Hsieh
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(7.17 KB, patch)
2017-04-10 10:16 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2017-04-10 09:24:13 PDT
Created
attachment 306691
[details]
Patch
Wenson Hsieh
Comment 2
2017-04-10 09:32:50 PDT
Created
attachment 306692
[details]
Patch
Tim Horton
Comment 3
2017-04-10 09:42:36 PDT
Comment on
attachment 306692
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=306692&action=review
> LayoutTests/fast/events/drag-to-navigate.html:1 > +<!-- webkit-test-runner [ enableDragDestinationActionLoad=true ] -->
Technically no reason this needs to be a thing like this, could just be JS API (doesn't need to be known before load) but ... I guess it's OK?
Wenson Hsieh
Comment 4
2017-04-10 10:03:33 PDT
Comment on
attachment 306692
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=306692&action=review
>> LayoutTests/fast/events/drag-to-navigate.html:1 >> +<!-- webkit-test-runner [ enableDragDestinationActionLoad=true ] --> > > Technically no reason this needs to be a thing like this, could just be JS API (doesn't need to be known before load) but ... I guess it's OK?
True, but I think in this case, TestOptions are appropriate since there aren't really cases where this behavior needs to change at runtime (i.e. it's more like a configuration or initialization param rather than a behavior to be performed).
Wenson Hsieh
Comment 5
2017-04-10 10:09:39 PDT
Created
attachment 306699
[details]
Patch for landing
WebKit Commit Bot
Comment 6
2017-04-10 10:10:54 PDT
Comment on
attachment 306699
[details]
Patch for landing Rejecting
attachment 306699
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 306699, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output:
http://webkit-queues.webkit.org/results/3512117
Wenson Hsieh
Comment 7
2017-04-10 10:16:43 PDT
Created
attachment 306701
[details]
Patch for landing
WebKit Commit Bot
Comment 8
2017-04-10 10:59:01 PDT
Comment on
attachment 306701
[details]
Patch for landing Clearing flags on attachment: 306701 Committed
r215189
: <
http://trac.webkit.org/changeset/215189
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug