REGRESSION (r214403): fast/events/drag-to-navigate.html and fast/events/only-valid-drop-targets-receive-file-drop.html failing https://bugs.webkit.org/show_bug.cgi?id=170677 <rdar://problem/31512633>

Reviewed by Tim Horton.

Tools:

Fixes two drag and drop LayoutTests by introducing and enabling a TestOptions switch (enableDragDestinationActionLoad)
to allow dropping URLs to trigger page navigation.

* DumpRenderTree/TestOptions.h:
* DumpRenderTree/TestOptions.mm:
(TestOptions::TestOptions):
* DumpRenderTree/mac/DumpRenderTree.mm:
(resetWebViewToConsistentStateBeforeTesting):
* DumpRenderTree/mac/UIDelegate.h:
* DumpRenderTree/mac/UIDelegate.mm:
(-[UIDelegate resetToConsistentStateBeforeTesting:]):
(-[UIDelegate webView:dragDestinationActionMaskForDraggingInfo:]):

LayoutTests:

Turn enableDragDestinationActionLoad on in these two LayoutTests via WKTR options.

* fast/events/drag-to-navigate.html:
* fast/events/only-valid-drop-targets-receive-file-drop.html:


Canonical link: https://commits.webkit.org/187615@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215189 268f45cc-cd09-0410-ab3c-d52691b4dbfc